Image fiting size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p id="title"></p>
         </div>
         <div class="meme-area">
-          <img src="" alt="" id="image" />
+          <img id="image" />
         </div>
         <div class="author-area">
           <p id="author"></p>
